Kubernetes/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codemaster
  namespace: codemaster
  labels:
    app.kubernetes.io/name: codemaster
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - codemaster.yousri-meftah.com
      secretName: codemaster-tls
  rules:
    - host: codemaster.yousri-meftah.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: codemaster-web
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codemaster-web
                port:
                  name: http
